# virtual_obstacles

./: CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  package.xml
cfg/: GenericPlugin.cfg
include/virtual_obstacles/: moving_objects.h
launch/: moving_objects_generator.launch
msg/: moving_object_msg.msg
param/: global_costmap_params.yaml  local_costmap_params.yaml
src/: Kalman.py  moving_objects.cpp  moving_objects_msg_generator.py
